--- a/analyse.html
+++ b/analyse.html
@@ -73,7 +73,7 @@ UA-88674412-1<script>
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">drag and drop web creator software download</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-2c" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">top html web page development software download</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-2c" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
 
     <div class="container">
         <div class="row">
@@ -194,7 +194,7 @@ UA-88674412-1<script>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-6 col-lg-3">
                 <h4>Categories</h4>
-                <ul><li>Wie zijn we</li><li>Vertrekgeluiden</li><li>project</li></ul>
+                <ul><li><a href="wiezijnwe.html">Wie zijn we</a></li><li><a href="vertrekgeluiden.html">Vertrekgeluiden</a></li><li><a href="eindontwerp.html">project</a></li></ul>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-6 col-lg-3">
                 <p><strong>Contacts</strong><br>Email: groep17@yahoo.com<br><br><br><strong>Address</strong><br>UAntwerpen&nbsp;<br>Campus Mutsaard</p>
@@ -207,7 +207,7 @@ UA-88674412-1<script>
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="MJZFugn4JjFiqj6d2RmskqDiX1yDN+ZeKYuiPIYkidS23cRer5LLwNm4d1eF0CZDmMzroGW0JHuiuT+eQecIwqFaD126Fn/N8dG5uKNAxXbmw4Ed2ffYy5r1QqLx5LO0" data-form-email="true">
+                    <input type="hidden" value="HN7j0gfaLnCaWCUJLQ91uPddKIoI+ltMkJvmUueKzMYD//nthNHPEAtbtimuChqSXUL+7cSDNpdiAzp0XCO+liKD649Tys0l/WsH6JUVGUeFJLHNaSOI0XixJGOSnL5e" data-form-email="true">
 
                     
 
