--- a/brainstorm.html
+++ b/brainstorm.html
@@ -74,7 +74,7 @@ UA-88674412-1<script>
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">easy html site building software</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2l" style="background-color: rgb(255, 255, 255); padding-top: 140px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">top site design software download</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2l" style="background-color: rgb(255, 255, 255); padding-top: 140px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -359,7 +359,7 @@ UA-88674412-1<script>
     </div>
 </section>
 
-<section class="mbr-footer mbr-section mbr-section-md-padding" id="contacts3-14" style="background-color: rgb(46, 46, 46); padding-top: 30px; padding-bottom: 30px;">
+<section class="mbr-footer mbr-section mbr-section-md-padding" id="contacts3-j" style="background-color: rgb(46, 46, 46); padding-top: 30px; padding-bottom: 30px;">
 
 
     <div class="row">
@@ -390,7 +390,7 @@ UA-88674412-1<script>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-6 col-lg-3">
                 <h4>Categories</h4>
-                <ul><li>Wie zijn we</li><li>Vertrekgeluiden</li><li>project</li></ul>
+                <ul><li><a href="wiezijnwe.html">Wie zijn we</a></li><li><a href="vertrekgeluiden.html">Vertrekgeluiden</a></li><li><a href="eindontwerp.html">project</a></li></ul>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-6 col-lg-3">
                 <p><strong>Contacts</strong><br>Email: groep17@yahoo.com<br><br><br><strong>Address</strong><br>UAntwerpen&nbsp;<br>Campus Mutsaard</p>
@@ -403,20 +403,20 @@ UA-88674412-1<script>
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="1MwUAhNo9l4QHZKVr6tNPbrq5cyBk9lQ2i0lV65svsr3JPGAeIR19Gnv6zUukpGfCpzU75fm38OHVeLrpy2a7pAxB4FPiMxHmGphD5PbBBvCcGsAJewZhRIxwkEv2T85" data-form-email="true">
+                    <input type="hidden" value="M76lzPFH9sWPhIxkcpFS+DH20lCMoyPgjdKNRimMGEOp1jfh3lJg5B8C1o3UEmCYnW2g4yUKbse9qKzzQ5kZ6d9CzTYfVBn5CbKiDe2zE0rGVXK59MShdBfrOmeQ68cP" data-form-email="true">
 
                     
 
                     <div class="form-group">
-                        <label class="form-control-label" for="contacts3-14-email">Email<span class="form-asterisk">*</span></label>
-                        <input type="email" class="form-control input-sm input-inverse" name="email" required="" data-form-field="Email" id="contacts3-14-email">
+                        <label class="form-control-label" for="contacts3-j-email">Email<span class="form-asterisk">*</span></label>
+                        <input type="email" class="form-control input-sm input-inverse" name="email" required="" data-form-field="Email" id="contacts3-j-email">
                     </div>
 
                     
 
                     <div class="form-group">
-                        <label class="form-control-label" for="contacts3-14-message">Message</label>
-                        <textarea class="form-control input-sm input-inverse" name="message" data-form-field="Message" rows="5" id="contacts3-14-message"></textarea>
+                        <label class="form-control-label" for="contacts3-j-message">Message</label>
+                        <textarea class="form-control input-sm input-inverse" name="message" data-form-field="Message" rows="5" id="contacts3-j-message"></textarea>
                     </div>
 
                     <div><button type="submit" class="btn btn-sm btn-black">Contact us</button></div>
