--- a/ontwerpproces.html
+++ b/ontwerpproces.html
@@ -74,7 +74,7 @@ UA-88674412-1<script>
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">simple bootstrap site builder software download</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2e" style="background-color: rgb(255, 255, 255); padding-top: 140px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">top offline web page development software download</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2e" style="background-color: rgb(255, 255, 255); padding-top: 140px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -225,7 +225,7 @@ UA-88674412-1<script>
     </div>
 </section>
 
-<section class="mbr-footer mbr-section mbr-section-md-padding" id="contacts3-14" style="background-color: rgb(46, 46, 46); padding-top: 30px; padding-bottom: 30px;">
+<section class="mbr-footer mbr-section mbr-section-md-padding" id="contacts3-j" style="background-color: rgb(46, 46, 46); padding-top: 30px; padding-bottom: 30px;">
 
 
     <div class="row">
@@ -256,7 +256,7 @@ UA-88674412-1<script>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-6 col-lg-3">
                 <h4>Categories</h4>
-                <ul><li>Wie zijn we</li><li>Vertrekgeluiden</li><li>project</li></ul>
+                <ul><li><a href="wiezijnwe.html">Wie zijn we</a></li><li><a href="vertrekgeluiden.html">Vertrekgeluiden</a></li><li><a href="eindontwerp.html">project</a></li></ul>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-6 col-lg-3">
                 <p><strong>Contacts</strong><br>Email: groep17@yahoo.com<br><br><br><strong>Address</strong><br>UAntwerpen&nbsp;<br>Campus Mutsaard</p>
@@ -269,20 +269,20 @@ UA-88674412-1<script>
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="QOrHp7cdokH0sPlgvWkoY1oX1SVJOl9CKaWMNOCs7kVgkVOycqZuP/DKJwM5/fbdZsNuJQC//7uQY3kGi0J5l9xN4gffGG0aTE1c8Qr6eh+kvoqc+szp2j/MXxiS+Gj1" data-form-email="true">
+                    <input type="hidden" value="d/tzTDmTZnrQOmNZUnPVI6B7QcU72JY9P5tI/0PU8s+5byfrp5LRXOEVKnA0WUkAbfpu4IGC8lE583WM/zWrXqTY7bPzuWI/+O8EYaqWv4VKbXkZEgNfO++yIHoBzB/0" data-form-email="true">
 
                     
 
                     <div class="form-group">
-                        <label class="form-control-label" for="contacts3-14-email">Email<span class="form-asterisk">*</span></label>
-                        <input type="email" class="form-control input-sm input-inverse" name="email" required="" data-form-field="Email" id="contacts3-14-email">
+                        <label class="form-control-label" for="contacts3-j-email">Email<span class="form-asterisk">*</span></label>
+                        <input type="email" class="form-control input-sm input-inverse" name="email" required="" data-form-field="Email" id="contacts3-j-email">
                     </div>
 
                     
 
                     <div class="form-group">
-                        <label class="form-control-label" for="contacts3-14-message">Message</label>
-                        <textarea class="form-control input-sm input-inverse" name="message" data-form-field="Message" rows="5" id="contacts3-14-message"></textarea>
+                        <label class="form-control-label" for="contacts3-j-message">Message</label>
+                        <textarea class="form-control input-sm input-inverse" name="message" data-form-field="Message" rows="5" id="contacts3-j-message"></textarea>
                     </div>
 
                     <div><button type="submit" class="btn btn-sm btn-black">Contact us</button></div>
