--- a/vertrekgeluiden.html
+++ b/vertrekgeluiden.html
@@ -74,7 +74,7 @@ UA-88674412-1<script>
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">best responsive web site maker software download</a></section><section class="mbr-section mbr-section__container mbr-after-navbar" id="buttons1-27" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">best mobile web page development</a></section><section class="mbr-section mbr-section__container mbr-after-navbar" id="buttons1-27" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -267,7 +267,7 @@ UA-88674412-1<script>
     </div>
 </section>
 
-<section class="mbr-footer mbr-section mbr-section-md-padding" id="contacts3-21" style="background-color: rgb(46, 46, 46); padding-top: 30px; padding-bottom: 30px;">
+<section class="mbr-footer mbr-section mbr-section-md-padding" id="contacts3-j" style="background-color: rgb(46, 46, 46); padding-top: 30px; padding-bottom: 30px;">
 
 
     <div class="row">
@@ -298,7 +298,7 @@ UA-88674412-1<script>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-6 col-lg-3">
                 <h4>Categories</h4>
-                <ul><li>Wie zijn we</li><li>Vertrekgeluiden</li><li>project</li></ul>
+                <ul><li><a href="wiezijnwe.html">Wie zijn we</a></li><li><a href="vertrekgeluiden.html">Vertrekgeluiden</a></li><li><a href="eindontwerp.html">project</a></li></ul>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-6 col-lg-3">
                 <p><strong>Contacts</strong><br>Email: groep17@yahoo.com<br><br><br><strong>Address</strong><br>UAntwerpen&nbsp;<br>Campus Mutsaard</p>
@@ -311,23 +311,20 @@ UA-88674412-1<script>
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="jjGGYPerseCpH8AwFGn0yUhH6phESoNsDt8G3nOylSm5KeNFavL8y0kzyvXFCaZbJcWw9mSv7hD6f0c0KmKfQFy44NrO44qMBv1OKnjU78GlPQKZoHGUOyR0Q5bVcQZr" data-form-email="true">
+                    <input type="hidden" value="i1+Q6i3obXmfIVfqanJfJCz94P3IVqFkE7GcXDPUtAi301oAiLeU8jtZOodI2wZYyI3za3+iXJdyzX6THXnR7HFzfdfhQMhT+coBlnbrF/JmKLNYJju3JkWal8BZp2Xn" data-form-email="true">
+
+                    
 
                     <div class="form-group">
-                        <label class="form-control-label" for="contacts3-21-name">Name<span class="form-asterisk">*</span></label>
-                        <input type="text" class="form-control input-sm input-inverse" name="name" required="" data-form-field="Name" id="contacts3-21-name">
-                    </div>
-
-                    <div class="form-group">
-                        <label class="form-control-label" for="contacts3-21-email">Email<span class="form-asterisk">*</span></label>
-                        <input type="email" class="form-control input-sm input-inverse" name="email" required="" data-form-field="Email" id="contacts3-21-email">
+                        <label class="form-control-label" for="contacts3-j-email">Email<span class="form-asterisk">*</span></label>
+                        <input type="email" class="form-control input-sm input-inverse" name="email" required="" data-form-field="Email" id="contacts3-j-email">
                     </div>
 
                     
 
                     <div class="form-group">
-                        <label class="form-control-label" for="contacts3-21-message">Message</label>
-                        <textarea class="form-control input-sm input-inverse" name="message" data-form-field="Message" rows="5" id="contacts3-21-message"></textarea>
+                        <label class="form-control-label" for="contacts3-j-message">Message</label>
+                        <textarea class="form-control input-sm input-inverse" name="message" data-form-field="Message" rows="5" id="contacts3-j-message"></textarea>
                     </div>
 
                     <div><button type="submit" class="btn btn-sm btn-black">Contact us</button></div>
