--- a/vormenstudie.html
+++ b/vormenstudie.html
@@ -73,7 +73,7 @@ UA-88674412-1<script>
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">simple wysiwyg website design</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2f" style="background-color: rgb(255, 255, 255); padding-top: 140px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">easy mobile web site builder</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2f" style="background-color: rgb(255, 255, 255); padding-top: 140px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -153,7 +153,7 @@ UA-88674412-1<script>
     </div>
 </section>
 
-<section class="mbr-footer mbr-section mbr-section-md-padding" id="contacts3-14" style="background-color: rgb(46, 46, 46); padding-top: 30px; padding-bottom: 30px;">
+<section class="mbr-footer mbr-section mbr-section-md-padding" id="contacts3-j" style="background-color: rgb(46, 46, 46); padding-top: 30px; padding-bottom: 30px;">
 
 
     <div class="row">
@@ -184,7 +184,7 @@ UA-88674412-1<script>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-6 col-lg-3">
                 <h4>Categories</h4>
-                <ul><li>Wie zijn we</li><li>Vertrekgeluiden</li><li>project</li></ul>
+                <ul><li><a href="wiezijnwe.html">Wie zijn we</a></li><li><a href="vertrekgeluiden.html">Vertrekgeluiden</a></li><li><a href="eindontwerp.html">project</a></li></ul>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-6 col-lg-3">
                 <p><strong>Contacts</strong><br>Email: groep17@yahoo.com<br><br><br><strong>Address</strong><br>UAntwerpen&nbsp;<br>Campus Mutsaard</p>
@@ -197,20 +197,20 @@ UA-88674412-1<script>
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="gXxksBBAvTDwjNo3FbnXdrtoXB6Bojjr+HqR+Ub/q+rPPJAmtlndR/aUJu7L2ZKFiT34ZrwevF+PKeA/Qwp6h1BeZh7fJdsVNr1pbqj99tuSWnxcciUkneWuzcE5/xSs" data-form-email="true">
+                    <input type="hidden" value="S8ElIsE2LhXMNuupOj/FJaFzXRn8X5unIV1U9H7sCiyIKP2CQGGMqxaMlB/YnY0m3B1ZD/BYhd716unp/+nA4VXZmeqB2cCbR/YuAE75MLu67Tn2e6DcUuUFwrJ42Tcs" data-form-email="true">
 
                     
 
                     <div class="form-group">
-                        <label class="form-control-label" for="contacts3-14-email">Email<span class="form-asterisk">*</span></label>
-                        <input type="email" class="form-control input-sm input-inverse" name="email" required="" data-form-field="Email" id="contacts3-14-email">
+                        <label class="form-control-label" for="contacts3-j-email">Email<span class="form-asterisk">*</span></label>
+                        <input type="email" class="form-control input-sm input-inverse" name="email" required="" data-form-field="Email" id="contacts3-j-email">
                     </div>
 
                     
 
                     <div class="form-group">
-                        <label class="form-control-label" for="contacts3-14-message">Message</label>
-                        <textarea class="form-control input-sm input-inverse" name="message" data-form-field="Message" rows="5" id="contacts3-14-message"></textarea>
+                        <label class="form-control-label" for="contacts3-j-message">Message</label>
+                        <textarea class="form-control input-sm input-inverse" name="message" data-form-field="Message" rows="5" id="contacts3-j-message"></textarea>
                     </div>
 
                     <div><button type="submit" class="btn btn-sm btn-black">Contact us</button></div>
